# coder-avec-ia

./: README.md  docker-compose.yml
back-fastapi/: .dockerignore  Dockerfile  init_count_table.py  pyproject.toml  readme.md
back-fastapi/app/: __init__.py  main.py
back-fastapi/app/models/: count_table.py
coder-ia-gen/: index.html  package-lock.json  package.json
coder-ia-gen/src/: App.css  App.tsx
init-db/: 01-create-table.sql
